fixed toolbar spacing

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -99,11 +99,12 @@
     display: none !important;
   }
   #address-input{
-    margin-left: 10px;
     width: (100%-292); /*Total rest of padding together*/
     height: 36px;
   }
-
+  .address-container {
+    width: 80%;
+  }
   #leftMobileButton{
     margin-left: 20px;
     display: block;
@@ -168,7 +169,9 @@
     border-radius: 0;
     box-shadow: none;
   }
-
+  .color-filter-container {
+    padding-right: 0;
+  }
   .color-filter-container button {
     display: none;
   }
